# mcp-server-clickup

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
arquivos uteis/: Conselho Tecnico - Checklists e Procedimentos.md  claude_desktop_config_backup.json  test_report_2026-01-13.md
docs/: PLANO_APROVADO_v2.md  PRD.md  SPRINTS.md
src/: clickup_mcp.py
tests/: conftest.py  test_formatting.py  test_tools.py
